--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "travel-motivator",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://maps.googleapis.com/maps/api",
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.2",
+    "axios": "^1.3.3",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dnd": "^16.0.1",
@@ -41,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.6"
   }
 }
