--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-uuid": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
